--- a/sections/problem-contextualization.tex
+++ b/sections/problem-contextualization.tex
@@ -6,7 +6,7 @@
 
 \section{Problem Contextualization}
 
-This thesis is aligned with a real case of an organization with 600 collaborators where the information systems department administration has 15 elements including the director and the team leaders. This management is composed by the department of evolving maintenance and the department of projects execution.\par
+This project is aligned with a real case of an organization with 600 collaborators where the information systems department administration has 15 elements including the director and the team leaders. This management is composed by the department of evolving maintenance and the department of projects execution.\par
 When a request is submitted to the information systems management, it must be classified into a maintenance operation or a project execution. A correct classification is fundamental, in the way it defines from which is the responsibility to deal with the request fulfillment.\par
 The request classification will depend on many factors. We can decide it by taking in account aspects like the risk to the business or the financial impact for the organization. In the end, it depends on the organizational culture and how it considers what is a maintenance operation and what is a project.\par
 After classified, we need to define the request fulfillment in terms of processes to consider and communication channels between the project and the maintenance department, assuming they are independent but need to be coordinated.\par
