--- a/sections/related-work.tex
+++ b/sections/related-work.tex
@@ -4,18 +4,14 @@
 % Related work
 % 
 
-\section{Related Work}
+
+\section{A State of the Art in Frameworks for Information Technology Governance and Management}
 
 % Example citation:
-In this section we will present a set of literature references on the subjects related to this thesis. We will present the most important frameworks on Information Systems Management and Governance. This process has the objective to come up with a choice of a frameworks or a set of them to implement our processes for project and maintenance management.\par
-In terms of logical application architectures, we will provide an analysis of the main features of a set of Project Management and IT Service Management solutions available on the market. Our objective is to conduct a comparative analysis relating all the solutions and choose the ones that best fit our purposes for use on an logical application architecture.  
+In this section we will present a set of literature references on the subjects related to this project. We will present the most important frameworks on Information Systems Management and Governance with the objective of coming up with a choice of a frameworks or a set of them to implement our processes for project and maintenance management.\par
+Our choice is centered in three frameworks we consider the most relevant for this project: COBIT 5, ITIL V3 and PMBOK. This three frameworks provide, from different perspectives, guides and principles for IT Governance and Management, providing processes for achieving a successful implementation of this principles in an organization.
 
-\subsection{Frameworks for Information Technologies Governance and Management}
-
-In this section we will present the three frameworks we consider the most relevant for this thesis: COBIT 5, ITIL V3 and PMBOK. This three frameworks provide, from different perspectives, guides and principles for IT Governance and Management, providing processes for achieving a successful implementation of this principles in an organization.\par
-
-
-\subsubsection{IT Governance and IT Management}
+\subsection{IT Governance and IT Management}
 
 One important concept to define is the difference between IT Governance and IT management. They are many times confused and some authors already tried to explain the difference between the two concepts.\par
 Considering the definition given by Van Grembergen \textit{et al.}, ``''IT Management is focused on the internal effective supply of IT services and products and the management of present IT operations. IT Governance in turn is much broader, and concentrates on performing and transforming IT to meet present and future demands of the business (internal focus) and the business' customers (external focus).``''.\par
@@ -30,7 +26,7 @@ Considering the definition given by Van Grembergen \textit{et al.}, ``''IT Manag
 
  Considering both definitions and the figure 1, we can conclude that IT Governance has a bigger dimension that IT Management, but both need to be related and complementary to achieve success inside an organization. It is not possible for an organization to have well defined and matured management processes that are no related to governance aspects, but governance needs management to achieve goals and objectives settled to achieve success.
 
-\subsubsection{COBIT 5}
+\subsection{COBIT 5}
 
 Control Objectives for Information and Related Technology (COBIT) is a framework created by the Information Systems Audit and Control Association (ISACA) for IT Management and IT Governance.\par
 COBIT 5 provides a comprehensive framework that assists enterprises in achieving their objectives for the governance and management of enterprise IT. Simply stated, it helps enterprises create optimal value from IT by maintaining a balance between realizing benefits and optimizing risk levels and resource use \cite{2012cobit}. The framework is built on five basic principles:
@@ -73,12 +69,12 @@ Figure 2 presents the COBIT 5 enablers previous defined and how they relate amon
 Considering figure 3, COBIT 5 process reference model considers two big domains of processes: Governance and Management. The governance domain contains five processes in the domain Evaluate, Direct and Monitor(EDM). The management domain has four internal domains of processes: Align, Plan and Organise(APO), Build, Acquire and Implement(BAI), Deliver, Service and Support (DSS) and Monitor, Evaluate and Assess(MEA).\par
 All processes for management and governance are presented in the appendix and all the implementation details explained in COBIT 5: Enabling Processes, A detailed reference guide to the processes defined in the COBIT 5 process reference model. This includes the COBIT 5 goals cascade, a process model explanation, governance and management practices, and the process reference model\cite{2012cobitEP}.\par
 COBIT 5 includes a process capability model based on ISO/IEC 15504 Software Engineering - Process Assessment standard. [REFERENCE HERE] This model allow to measure the current level of maturity of enterprise processes, presenting the gap between the current level and the desired one the enterprise wants to achieve. This new capability model is an improvement of the previous on COBIT 4.1, being more simplified and compliant with a generally accepted process assessment standard.\par
-Relating to other frameworks and standards, COBIT tries to establish a framework that is compliant with the most widely accepted standards in IT governance and management. In figure 4 we can see the standards COBIT 5 relates by processes domain, with special attention to ITIL V3, ISO/IEC 20000, PMBOK and CMMI, that are closely related to this thesis problem. This compliance with other standards is fundamental for a widely adoption of COBIT 5, in the way it tries to establish goals, metrics, practices, roles, inputs and outputs for each process, making it necessary being compliant with international standards. This will improve COBIT application and acceptance on organizations.\par
+Relating to other frameworks and standards, COBIT tries to establish a framework that is compliant with the most widely accepted standards in IT governance and management. In figure 4 we can see the standards COBIT 5 relates by processes domain, with special attention to ITIL V3, ISO/IEC 20000, PMBOK and CMMI, that are closely related to this project's problem. This compliance with other standards is fundamental for a widely adoption of COBIT 5, in the way it tries to establish goals, metrics, practices, roles, inputs and outputs for each process, making it necessary being compliant with international standards. This will improve COBIT application and acceptance on organizations.\par
 
 \subsubsection{COBIT 5 critical analysis}
 
 The COBIT 5 is one of the most interesting frameworks widely accepted by organizations in the IT management and Governance area. It arises as the main framework for establishing processes to guide us on management and governance and establish ways to control them. However, it is a complex framework that needs time and practice to be fully implemented.\par
-For this thesis project, we will consider only the domains relevant for our objectives, making a selection of the processes we pretend to implement. This will allow us to get the bigger value COBIT has to offer, making it possible, in the time-frame available, achieve our implementation objectives.\par
+For this project, we will consider only the domains relevant for our objectives, making a selection of the processes we pretend to implement. This will allow us to get the bigger value COBIT has to offer, making it possible, in the time-frame available, achieve our implementation objectives.\par
 One important aspect of the use of COBIT is that it provides a more business and strategic view of IT on organizations, presenting a lack of operational approach to some themes that are relevant for our project. To overcome this, we will analyze a more operational framework on IT service management, the ITIL V3 framework\cite{itilIntro,itilSS,itilST,itilSD,itilSO,itilCSI} and a project management guide considered by the main specialists on the area as the reference for project management, the Project Management Book of Knowledge\cite{pmbok5}.\par
 
 \begin{figure}
@@ -87,7 +83,7 @@ One important aspect of the use of COBIT is that it provides a more business and
 \caption{COBIT 5 coverage on other frameworks}
 \end{figure}
 
-\subsubsection{ITIL V3}
+\subsection{ITIL V3}
 
 First developed in the 1980s by the actual Office of Government Commerce (OGC), a branch of the British Government, ITIL defines processes for IT Service management at a high level, being left to the organizations to implement the processes in the manner most suitable to their particular situations and needs.\par
 ITIL is becoming a de facto standard worldwide as organizations adopt it as their guideline for establishing IT service management (ITSM) processes. IT organizations can use the guidance provided by ITIL to transform their service management capabilities into strategic assets, those that provide the basis for core competence, distinctive performance, durable advantage, and qualifications to participate in business opportunities.\par
@@ -99,9 +95,11 @@ The ITIL service management practices are comprised of three main sets of produc
 \caption{ITIL V3 volumes}
 \end{figure}
 
-The core set, presented in figure 5 and the one we will consider for this thesis, consists of six publications: Introduction to ITIL Service Management Practices, Service Strategy, Service Design, Service Transition, Service Operation and Continual Service Improvement. Each one of this volumes share the same conceptual structure, being composed by practice fundamentals and principles, life cycle processes and activities, supporting organization structures and roles, technology considerations, practice implementation and challenges, risks and critical success factors.
+The core set, presented in figure 5 and the one we will consider for this project, consists of six publications: Introduction to ITIL Service Management Practices, Service Strategy, Service Design, Service Transition, Service Operation and Continual Service Improvement. Each one of this volumes share the same conceptual structure, being composed by practice fundamentals and principles, life cycle processes and activities, supporting organization structures and roles, technology considerations, practice implementation and challenges, risks and critical success factors.
 
-\paragraph{\textbf{Service Strategy}} provides guidance on how to view service management not only as an organizational capability but as a strategic asset. Guidance is provided on the principles underpinning the practice of service management which are useful for developing service management policies, guidelines and processes across the ITIL Service Lifecycle.\cite{itilSS} The processes included in Service Strategy volume are:
+\subsubsection{Service Strategy} 
+
+Service Stategy volume provides guidance on how to view service management not only as an organizational capability but as a strategic asset. Guidance is provided on the principles underpinning the practice of service management which are useful for developing service management policies, guidelines and processes across the ITIL Service Lifecycle.\cite{itilSS} The processes included in Service Strategy volume are:
 
 \begin{itemize}
   \item Financial Management
@@ -109,7 +107,9 @@ The core set, presented in figure 5 and the one we will consider for this thesis
   \item Demand Management
 \end{itemize}
 
-\paragraph{\textbf{Service Design}} provides guidance for the design and development of services and service management practices. It covers design principles and methods for converting strategic objectives into portfolios of services and service assets. The scope of Service Design is not limited to new services. It includes the changes and improvements necessary to increase or maintain value to customers over the life cycle of services, the continuity of services, achievement of service levels, and conformance to standards and regulations.\cite{itilSD} The processes included in Service Design volume are:
+\subsubsection{Service Design} 
+
+Service Design volume provides guidance for the design and development of services and service management practices. It covers design principles and methods for converting strategic objectives into portfolios of services and service assets. The scope of Service Design is not limited to new services. It includes the changes and improvements necessary to increase or maintain value to customers over the life cycle of services, the continuity of services, achievement of service levels, and conformance to standards and regulations.\cite{itilSD} The processes included in Service Design volume are:
 
 \begin{itemize}
   \item Service Catalogue Management
@@ -124,7 +124,9 @@ The core set, presented in figure 5 and the one we will consider for this thesis
   \item Business Service Management
 \end{itemize} 
 
-\paragraph{\textbf{Service Transition}} provides guidance for the development and improvement of capabilities for transitioning new and changed services into live service operation. This publication provides guidance on how the requirements of Service Strategy encoded in Service Design are effectively realized in Service Operation while controlling the risks of failure and disruption.\cite{itilST} The processes included in Service Transition volume are:
+\subsubsection{Service Transition} 
+
+Service Transition volume provides guidance for the development and improvement of capabilities for transitioning new and changed services into live service operation. This publication provides guidance on how the requirements of Service Strategy encoded in Service Design are effectively realized in Service Operation while controlling the risks of failure and disruption.\cite{itilST} The processes included in Service Transition volume are:
 
 \begin{itemize}
   \item Change Management
@@ -136,7 +138,9 @@ The core set, presented in figure 5 and the one we will consider for this thesis
   \item Support and Service Evaluation 
 \end{itemize} 
 
-\paragraph{\textbf{Service Operation}} embodies practices in the management of the day-to-day operation of services. It includes guidance on achieving effectiveness and efficiency in the delivery and support of services to ensure value for the customer and the service provider. Strategic objectives are ultimately realized through Service Operation, therefore making it a critical capability. Guidance is provided on how to maintain stability in service operations, allowing for changes in design, scale, scope and service levels.\cite{itilSO} The processes included in Service Operation volume are:
+\subsubsection{Service Operation} 
+
+Service Operation volume embodies practices in the management of the day-to-day operation of services. It includes guidance on achieving effectiveness and efficiency in the delivery and support of services to ensure value for the customer and the service provider. Strategic objectives are ultimately realized through Service Operation, therefore making it a critical capability. Guidance is provided on how to maintain stability in service operations, allowing for changes in design, scale, scope and service levels.\cite{itilSO} The processes included in Service Operation volume are:
 
 \begin{itemize}
   \item Event Management
@@ -146,7 +150,9 @@ The core set, presented in figure 5 and the one we will consider for this thesis
   \item Access management
 \end{itemize} 
 
-\paragraph{\textbf{Continual Service Improvement}} provides instrumental guidance in creating and maintaining value for customers through better design, transition and operation of services. It combines principles, practices and methods from quality management, change management and capability improvement. Organizations learn to realize incremental and large-scale improvements in service quality, operational efficiency and business continuity. Guidance is provided for linking improvement efforts and outcomes with service strategy, design and transition.\cite{itilST} The processes included in Continual Service Improvement volume are:
+\subsubsection{Continual Service Improvement}
+
+Continual Service Improvement volume provides instrumental guidance in creating and maintaining value for customers through better design, transition and operation of services. It combines principles, practices and methods from quality management, change management and capability improvement. Organizations learn to realize incremental and large-scale improvements in service quality, operational efficiency and business continuity. Guidance is provided for linking improvement efforts and outcomes with service strategy, design and transition.\cite{itilST} The processes included in Continual Service Improvement volume are:
 
 \begin{itemize}
   \item The 7-Step Improving Process
@@ -154,15 +160,15 @@ The core set, presented in figure 5 and the one we will consider for this thesis
 \end{itemize} 
 
 \par Not different from COBIT,  ITIL takes public frameworks and standards as a form of the organization to have advantage on the market. Organizations should build their proprietary knowledge on top of a body of knowledge based on public frameworks and standards. Collaboration and coordination across organizations are easier because of shared practices and standards. According to a research performed by the UK Department of Trade and Industry (DTI), the value to the UK economy from standards is estimated to be about \textsterling2.5 billion per annum \cite{McNeillis01112005}.\par
-For related standards and frameworks to ITIL V3, we have ISO/IEC 20000 (service management system standards), ISO/IEC 27001 (standard providing requirements for an information security management system), PMBOK (manual for a set of standard terminology and guidelines for project management)\cite{pmbok5} and COBIT\cite{2012cobit}, already presented. This are the standards we will cover for our thesis by being directly related to ITIL V3 and its implementation.
+For related standards and frameworks to ITIL V3, we have ISO/IEC 20000 (service management system standards), ISO/IEC 27001 (standard providing requirements for an information security management system), PMBOK (manual for a set of standard terminology and guidelines for project management)\cite{pmbok5} and COBIT\cite{2012cobit}, already presented. This are the standards we will cover for our project by being directly related to ITIL V3 and its implementation.
 
 
 \subsubsection{ITIL V3 critical analysis}
 
-One crucial aspect for the importance of ITIL on this thesis is the operational view that it provides for IT Service Management. ITIL tries to focus on more management details, providing a more practical guidance for implementation. It is focused on IT Service Management and presents concrete guidance for managing services during its life cycle. De Haes and Van Grembergen state that COBIT tells what to do and ITIL explains how to do it, what makes COBIT adopting a process-focused approach and ITIL a service level-oriented one \cite{ITGovAndMech}.\par
-The main objective to include ITIL knowledge for this thesis is to provide a complementary guidance on IT management, enhancing the business oriented view of COBIT with a operational view. COBIT 5 will allow us to take advantage of this complementarity, related to the concern of ISACA to make it more compliant with other frameworks, including COBIT, on the new version (relating to COBIT 4.1). 
+One crucial aspect for the importance of ITIL on this project is the operational view that it provides for IT Service Management. ITIL tries to focus on more management details, providing a more practical guidance for implementation. It is focused on IT Service Management and presents concrete guidance for managing services during its life cycle. De Haes and Van Grembergen state that COBIT tells what to do and ITIL explains how to do it, what makes COBIT adopting a process-focused approach and ITIL a service level-oriented one \cite{ITGovAndMech}.\par
+The main objective to include ITIL knowledge for this project is to provide a complementary guidance on IT management, enhancing the business oriented view of COBIT with a operational view. COBIT 5 will allow us to take advantage of this complementarity, related to the concern of ISACA to make it more compliant with other frameworks, including COBIT, on the new version (relating to COBIT 4.1). 
 
-\subsubsection{PMBOK: A Guide to the Project Management Book of Knowledge}
+\subsection{PMBOK: A Guide to the Project Management Book of Knowledge}
 
 The Guide to the Project Management Body of Knowledge provides guidelines for managing individual projects and defines project management related concepts. It also describes the project management life cycle and its related processes, as well as the project life cycle.\cite{pmbok5}\par
 This guide is considered by many professionals in the area of business management as the main reference for processes and good practices in project management, in the way it defines the knowledge that are applicable to most project most of the time, and there is consensus about their value and usefulness.\par 
@@ -195,18 +201,18 @@ Another important aspect of PMBOK is that is a more general framework, making it
 
 \subsubsection{PMBOK critical analysis}
 
-The importance of PMBOK for this thesis is related to its widely acceptance and adoption as the reference guide to project management by many professionals in the area, being tested and evaluated its importance in terms of good practices adopted in project management. Despite being more general and lacking in specificity to IT management, it can be complemented with the two previous frameworks presented (COBIT and ITIL), using some more detailed guidance of ITIL and COBIT to improve PMBOK focus to this thesis.\par
-PMBOK presents processes for all phases of the life cycle of a project, being too extensive considering the theme of this thesis and the time-frame available. For this scope, we will only be able to consider a subset of all processes presented, being necessary, in the solution's architecture phase of this thesis, present a mapping between processes covered on PMBOK relating with processes of COBIT and ITIL.
+The importance of PMBOK for this project is related to its widely acceptance and adoption as the reference guide to project management by many professionals in the area, being tested and evaluated its importance in terms of good practices adopted in project management. Despite being more general and lacking in specificity to IT management, it can be complemented with the two previous frameworks presented (COBIT and ITIL), using some more detailed guidance of ITIL and COBIT to improve PMBOK focus to this project.\par
+PMBOK presents processes for all phases of the life cycle of a project, being too extensive considering the theme of this project and the time-frame available. For this scope, we will only be able to consider a subset of all processes presented, being necessary, in the solution's architecture phase of this project, present a mapping between processes covered on PMBOK relating with processes of COBIT and ITIL.
 
 
-\subsection{International standards}
+\section{Relevant International Standards}
 
 In this section we will present the international standards that are referenced or important to complement the frameworks previously presented. These standards will allow us to design processes in conformance with practices that are considerer as the reference in some areas of project management.\par
-We will analyze the ISO/IEC 12207, an systems and software engineering international standard for Software life cycle processes. This standard will allow us to define the processes that are important to consider in the scope of this thesis. It will provide an high-level process reference for the complete life cycle of a software system\par
+We will analyze the ISO/IEC 12207, an systems and software engineering international standard for Software life cycle processes. This standard will allow us to define the processes that are important to consider in the scope of this project. It will provide an high-level process reference for the complete life cycle of a software system\par
 Relating to COBIT, we have standards that are directly related to it, as the ISO/IEC 20000, a set of international standards for IT service management, and ISO/IEC 27000, a set of international standards for information security management systems. COBIT also relates with CMMI, the Capability Maturity Model Integration that is a framework for process improvement in business comprising models, appraisal methods, and training.\par
 For other standards more general to all frameworks we will present the ISO 31000, a set of standards that provide principles, framework and a process for managing risk, and ISO 19011, a international standard for providing guidelines for auditing management systems. This standards will complement complex areas of project management providing some additional and specific knowledge.
 
-\subsubsection{ISO/IEC 12207}
+\subsection{ISO/IEC 12207}
 
 ISO/IEC 12207:2008 establishes a common framework for software life cycle processes, with well-defined terminology, that can be referenced by the software industry. It contains processes, activities, and tasks that are to be applied during the acquisition of a software product or service and during the supply, development, operation, maintenance and disposal of software products.The purpose of this International Standard is to provide a defined set of processes to facilitate communication among acquirers, suppliers and other stakeholders in the life cycle of a software product.\par
 This standard combines the processes to be performed during the life cycle of a software project into seven groups . Each process is described in terms of its objectives and expected results and presents activities to be undertaken to achieve these same objectives. The processes are grouped in 7 groups, related to the phase they are applied during the software life cycle. All processes are listed in figure XXX.
@@ -229,10 +235,10 @@ This standard combines the processes to be performed during the life cycle of a 
 \end{figure}
 
 This standard may be used standalone or jointly with ISO/IEC 15288, and supplies a process reference model that supports process capability assessment in accordance with ISO/IEC 15504, a set of technical standards documents for the computer software development processes assessment.\par
-This standard is important for this thesis in the way it standardize the processes for the whole life cycle of the software, grouping the processes for a better understanding its scope. We will use this standard, specifically figure 7, to present the processes that make part of the scope of this thesis, after what we will relate them with the frameworks previously presented. 
+This standard is important for this project in the way it standardize the processes for the whole life cycle of the software, grouping the processes for a better understanding its scope. We will use this standard, specifically figure 7, to present the processes that make part of the scope of this project, after what we will relate them with the frameworks previously presented. 
 
 
-\subsubsection{ISO/IEC 20000}
+\subsection{ISO/IEC 20000}
 
 ISO/IEC 20000 corresponds to a standard on IT Service Management. Initially was developed to reflect best practice guidance contained in some frameworks like ITIL, COBIT or Microsoft operations. This standard in composed by 5 parts:
 
@@ -252,11 +258,11 @@ ISO/IEC 20000 corresponds to a standard on IT Service Management. Initially was 
   
 \end{itemize}
 
-\subsubsection{ISO/IEC 27000} - We need to define if it is really in the scope of this project
+\subsection{ISO/IEC 27000} - We need to define if it is really in the scope of this project
 
-\subsubsection{CMMI} - We need to define if it is really in the scope of this project
+\subsection{CMMI} - We need to define if it is really in the scope of this project
 
-\subsubsection{ISO 31000}
+\subsection{ISO 31000}
 
 ISO 31000 is a set of standards related to risk management. ISO 31000:2009, Risk management – Principles and guidelines, provides principles, framework and a process for managing risk. It can be used by any organization regardless of its size, activity or sector.Using ISO 31000 can help organizations increase the likelihood of achieving objectives, improve the identification of opportunities and threats and effectively allocate and use resources for risk treatment.\par
 In figure 8, we can observe the purposed framework by ISO 31000:2009, assisting the organization to integrate risk management into its overall management system. Many organizations have already frameworks for implementing risk management, that can be evaluated and reviewed against this international standard in order to check its adequacy. In figure 9 are presented the processes for Risk management implementation.\par
@@ -275,13 +281,13 @@ In figure 8, we can observe the purposed framework by ISO 31000:2009, assisting 
 
 This standard cannot be used for certification purposes, in the way it doesn't provide guidance for internal or external audit programmes, but can be used to compare the risk management processes of the organization with international standard benchmarks.\par
 Risk management is a very complex area on project management. It is connected to the whole life cycle of a project and need to be controlled and assessed in many phases and by different forms. ISO/IEC 31010:2009, Risk management – Risk assessment techniques focuses on risk assessment. Risk assessment helps decision makers understand the risks that could affect the achievement of objectives as well as the adequacy of the controls already in place.\par
-The relevance of ISO 31000 for this thesis focuses on its orientation to an important and complex area of project and maintenance management, providing a framework for Risk management, as well as a set of processes to implement it. It is important to clearly define the scope of this standard related to this thesis, trying to reduce the complexity and increase its utility for the processes we pretend to design.
+The relevance of ISO 31000 for this project focuses on its orientation to an important and complex area of project and maintenance management, providing a framework for Risk management, as well as a set of processes to implement it. It is important to clearly define the scope of this standard related to this project, trying to reduce the complexity and increase its utility for the processes we pretend to design.
 
 
-\subsubsection{ISO 19011}
+\subsection{ISO 19011}
 
 This International Standard provides guidance on auditing management systems, including the principles of auditing, managing an audit programme and conducting management system audits, as well as guidance on the evaluation of competence of individuals involved in the audit process, including the person managing the audit programme, auditors and audit teams. It is applicable to all organizations that need to conduct internal or external audits of management systems or manage an audit programme.\par
-In figure 10 is presented the process flow for the management of an audit programme, described in this international standard. This process can be specially important for out thesis if we pretend to introduce the auditing processes in the scope of the processes to design. We can use the process flow presented in figure 10 to help designing a auditing process.
+In figure 10 is presented the process flow for the management of an audit programme, described in this international standard. This process can be specially important for out project if we pretend to introduce the auditing processes in the scope of the processes to design. We can use the process flow presented in figure 10 to help designing a auditing process.
 
 \begin{figure}[b!]
 \centering
@@ -290,11 +296,11 @@ In figure 10 is presented the process flow for the management of an audit progra
 \end{figure}
 
 
-\subsection{Market Solutions on Logical Application Architecture}
+\section{A State of the Art in Market Solutions}
 
-\subsubsection{Project Management}
+\subsection{Project Management}
 
-\subsubsection{IT Service Management}
+\subsection{IT Service Management}
 
 
 
